--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,17 +6,24 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Matheus Lucas",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.1"
+    "@fastify/cors": "^9.0.1",
+    "@prisma/client": "^5.11.0",
+    "cors": "^2.8.5",
+    "eslint": "^8.57.0",
+    "fastify": "^4.26.2",
+    "mongodb": "^6.5.0",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.11.30",
+    "prisma": "^5.11.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
   }
